# gemstone-project

./: .gitignore  dvc.yaml  pyproject.toml  requirements.txt
.dvc/: config
.github/workflows/: ci.yaml
config/: scheme.yaml
src/components/: data_ingestion.py  data_transformation.py  model_eval.py  model_trainer.py  moel_eval.py
src/config/: configuration.py
src/constants/: __init__.py
src/entity/: artifact_entity.py  config_entity.py
src/exception/: __init__.py
src/logger/: __init__.py
src/pipeline/: prediction_pipeline.py  training_pipeline.py  traning_pipeline.py
src/utils/: preprocessing_utils.py  utility.py
